--- a/game/vqlq/vqlq.css
+++ b/game/vqlq/vqlq.css
@@ -111,6 +111,7 @@ li {
 	display: inline-block;
 	word-break: break-word;
 	max-width: 20%;
+    transform: rotate(90deg);
 }
 
 .text-1 {
@@ -147,7 +148,7 @@ button:hover {
 }
 /* them */
 .chontuong{
-    margin: 200px;
+    margin: 100px;
 }
 button{
     background-color: rgb(100, 98, 98);
