--- a/game/vqlq/vqlq.css
+++ b/game/vqlq/vqlq.css
@@ -158,3 +158,15 @@ button{
     background-color: black;
     color: white;
 }
+.inner-wheel{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text-wheel {
+    z-index: 1;
+    font-size: 28px;
+    color: #333;
+}
