--- a/game/vqlq/vqlq.css
+++ b/game/vqlq/vqlq.css
@@ -1,24 +1,29 @@
 :root {
-	--size-wheel: 25rem;
+	--size-wheel: 80vw;
 }
 
 html {
 	box-sizing: border-box;
-	height: 100%;
-	overflow: hidden;
 }
 
-body {
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+.main {
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	
+}
+.main .btn--wheel{
+	margin-top: 50px;
+	display: block;
+	max-width: 150px;
 }
 
 .msg {
@@ -26,37 +31,42 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin-top: 0.5rem;
 	text-transform: capitalize;
+	text-align: center;
 }
 
 ul {
+	max-width: 800px;
+	max-height: 800px;
 	position: relative;
 	padding: 0;
 	margin: 1rem 0;
 	width: var(--size-wheel);
 	height: var(--size-wheel);
-	border: 10px solid rgb(0, 12, 184);
+	border: #4E261D solid 3px;
 	border-radius: 50%;
 	list-style: none;
 	overflow: hidden;
 	transition: cubic-bezier(0.075, 0.8, 0.2, 1) 1s;
 }
-li b {
+li .name-hero {
 	font-weight: normal;
+	text-align: end;
+	padding-left: 40px;
 }
-span {
+.out-wheel {
 	display: inline-block;
 	position: relative;
 	padding: 0.5rem;
 }
 
-span::before {
+.out-wheel::before {
 	content: '';
 	position: absolute;
-	top: 0rem;
+	top: -20px;
 	left: 50%;
-	border-left: 2rem solid transparent;
-	border-right: 2rem solid transparent;
-	border-top: 4rem solid rgb(255, 217, 0);
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	border-top: 30px solid rgb(255, 217, 0);
 	z-index: 2;
 	transform: translateX(-50%);
 	animation: arrow ease-out 0.6s infinite;
@@ -64,17 +74,17 @@ span::before {
 
 @keyframes arrow {
 	0% {
-		top: -2rem;
+		top: -30px;
 	}
 	80% {
 		top: 0;
 	}
 	100% {
-		top: -1.5rem;
+		top: -30px;
 	}
 }
 
-span::after {
+.out-wheel::after {
 	content: '';
 	width: 2rem;
 	height: 2rem;
@@ -94,6 +104,7 @@ li {
 	width: 50%;
 	height: 50%;
 	transform-origin: 0% 100%;
+	border: #4E261D solid 1px ;
 }
 
 .text {
@@ -105,31 +116,32 @@ li {
 	display: block;
 	text-align: center;
 	padding-top: 1.7rem;
-	font-weight: 600;
 	color: #fff;
 }
 
-.text > b {
+.text .name-hero {
 	display: inline-block;
 	word-break: break-word;
 	max-width: 20%;
     transform: rotate(90deg);
 }
 
-.text-1 {
-	background-color: rgb(0, 89, 255);
+.text-0 {
+	background-color:#FF8B7C ;
 }
+
+.text-1 {
+	background-color:#F1BD99;
+}
+
+
 
 .text-2 {
-	background-color: rgb(126, 182, 255);
+	background-color:#88E6D9;
 }
 
-.main {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
+
+
 
 button {
 	display: inline-block;
@@ -151,6 +163,12 @@ button:hover {
 /* them */
 .chontuong{
     margin: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.select {
+	margin-top: 50px;
 }
 button{
     background-color: rgb(100, 98, 98);
@@ -172,3 +190,20 @@ button{
     font-size: 28px;
     color: #333;
 }
+
+  
+/* footer */
+html footer{
+    height: 200px;
+    background-color: #CCEDC2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer .mid {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 500;
+}
+/*end footer */
